--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -176,7 +176,9 @@ img {
 .centered {
   position: relative;
   top: 50%;
-  margin-top: 0 !important; /* use padding if needed */
+ /* margin-top: 0 !important; /* use padding if needed */
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
 /* to override centered, use 
@@ -223,7 +225,7 @@ body {
   clear: both;
 }
 .page {
-  height: 100%;
+ /* height: 100%;*/
   text-align: right;
 }t
 .page header {
@@ -386,13 +388,13 @@ p {
 /* ******************************** */
 /* ****** RESPONSIVE HEADLINES HOME */
 #home .centered {
-  transform: none;
+  /*transform: none;*/
 }
 #home .fittextjs {
   width: 560px;
   height: 332px;
-  padding-top: 155px;
-  margin-bottom: 144px;
+ /* padding-top: 155px;
+  margin-bottom: 144px;*/
 }
 #home .fittextjs h1 {
   line-height: 1.02;
@@ -507,6 +509,7 @@ p {
 /* ******************************** */
 /* *********************** MENU NAV */
 #header-nav {
+  display: inline-block;
   margin-top: 85px;
   font-weight: 700;
   font-size: 18px;
@@ -625,7 +628,8 @@ p {
 footer p {
   padding-left: 7px;
   font-weight: 700;
-  font-size: 16px;
+  /*font-size: 16px;*/
+  font-size: .95em;
 }
 footer a {
   font-weight: 900;
