--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -388,13 +388,13 @@ p {
 /* ******************************** */
 /* ****** RESPONSIVE HEADLINES HOME */
 #home .centered {
-  /*transform: none;*/
+  transform: none;
 }
 #home .fittextjs {
   width: 560px;
   height: 332px;
- /* padding-top: 155px;
-  margin-bottom: 144px;*/
+  padding-top: 155px;
+  margin-bottom: 144px; 
 }
 #home .fittextjs h1 {
   line-height: 1.02;
