--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -46,6 +46,8 @@
     height: auto;
     padding-top: 16%;
     padding-bottom: 14%;
+    -webkit-transform: none;
+    -ms-transform: none;
     transform: none;
   }
 
@@ -122,7 +124,7 @@
   .pages #contact .fittextjs .s-header-two {
     width: 100%;
     height: auto;
-    font-size: .96em;
+    font-size: .9em;
   }
   .pages #contact .fittextjs .sub-header {
     width: 44%;
@@ -242,7 +244,9 @@
     font-size: 22px;
   }
   #emb_container .tile:hover img {
-    transform: translate(0, -33px) scale(0.55);;
+    -webkit-transform: translateY(0, -33px) scale(0.55);
+    -ms-transform: translateY(0, -33px) scale(0.55);
+    transform: translate(0, -33px) scale(0.55);
   }
 
   /* ******************************** */
@@ -355,6 +359,8 @@
     transform: translate(0 , -50px) scale(0.7);
   } */
   #emb_container .tile:hover img {
+    -webkit-transform: translate(0 , -50px) scale(0.8);
+    -ms-transform: translate(0 , -50px) scale(0.8);
     transform: translate(0 , -50px) scale(0.8);
   }
   .tiles .details {
@@ -540,6 +546,8 @@
   }
   footer .centered {
     position: static;
+    -ms-transform: none;
+    -webkit-transform: none;
     transform: none;
   }
 }
