--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -1,16 +1,85 @@
-/* OPTIMIZADO x width 1350px = design */
-/* responsive.css x resto widths */
 
-// ---------------------- ENJOY MONDAYS PATTERN */
+@import "partials/_settings";
 
-// ------------------------------------- COLORS */
 
-$theme_colors: (
-  $LIGHT_GRAY: #E9E8E3,
-  $DARK_GRAY: #3A3A3A,
-  $DARK_BLUE: #363B48,
-  $FUXSIA: #DF3F54,
-  $LIGHT_FUXSIA: #F17C71
-);
+// ------------------------------ COLOR CLASSES */
+
+$theme_color_values: map-values($theme_colors);
+
+@for $i from 1 through length($theme_color_values) {
+  // background colors
+  .bg-#{$i} {
+    background-color: nth($theme_color_values, $i);
+  }
+  // font colors
+  .color-#{$i} {
+    color: nth($theme_color_values, $i);
+  }
+}
+
+
+// ---------------------------- WITH BIG HEADER */
+
+@mixin setHW($h, $w, $m) {
+  
+  #main-header,
+  #header_placeholder {
+    height: $h;
+  }
+
+
+
+  #logo {
+    width: $w;
+    margin-top: $m;
+  }
+
+  .fillheight {
+    min-height: calc(100vh - #{$h});
+
+    &::nth-last-child(2) {
+      min-height: calc(100vh - #{$h} - #{$footer_h});
+    }
+  }
+}
+
+
+// ------------------------------------- HEADER */
+
+#main-header {
+  position: fixed;
+  top: 0;
+  z-index: 2000;
+  transition: all 1s;
+
+  @media screen and (max-width: 650px) {
+    height: auto;
+    padding-bottom: 1%;
+  }
+
+  @media screen and (max-width: 480px) {
+    padding-bottom: 3%;
+    text-align: center;
+  }
+}
+
+#logo {
+  float: left;
+}
+
+// ---------------------------- WITH BIG HEADER */
+
+.big-header {
+  @include setHW($header_h_big, $logo_w_big, 40px);
+}
+
+
+// -------------------------- WITH SMALL HEADER */
+
+.small-header {
+  @include setHW($header_h_small, $logo_w_small, 18px);
+}
+
+  
 
 
