--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,64 +1,70 @@
-/*
-Error: Undefined variable: "$LIGHT_GRAY".
-        on line 9 of sass/style.scss
+.bg-1 {
+  background-color: #E9E8E3; }
 
-4: // ---------------------- ENJOY MONDAYS PATTERN *\/
-5: 
-6: // ------------------------------------- COLORS *\/
-7: 
-8: $theme_colors: (
-9:   $LIGHT_GRAY: #E9E8E3,
-10:   $DARK_GRAY: #3A3A3A,
-11:   $DARK_BLUE: #363B48,
-12:   $FUXSIA: #DF3F54,
-13:   $LIGHT_FUXSIA: #F17C71
-14: );
+.color-1 {
+  color: #E9E8E3; }
 
-Backtrace:
-sass/style.scss:9
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/variable.rb:49:in `_perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/node.rb:50:in `perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/map_literal.rb:53:in `block in _perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/map_literal.rb:52:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/map_literal.rb:52:in `_perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/node.rb:50:in `perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:468:in `visit_variable'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/engine.rb:368:in `_render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/engine.rb:285:in `render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:490:in `update_stylesheet'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `each'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:328:in `block in watch'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:252:in `call'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:254:in `call'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:254:in `report_changes'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:323:in `poll_changed_directories'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Undefined variable: \"$LIGHT_GRAY\".\A         on line 9 of sass/style.scss\A \A 4: // ---------------------- ENJOY MONDAYS PATTERN */\A 5: \A 6: // ------------------------------------- COLORS */\A 7: \A 8: $theme_colors: (\A 9:   $LIGHT_GRAY: #E9E8E3,\A 10:   $DARK_GRAY: #3A3A3A,\A 11:   $DARK_BLUE: #363B48,\A 12:   $FUXSIA: #DF3F54,\A 13:   $LIGHT_FUXSIA: #F17C71\A 14: );"; }
+.bg-2 {
+  background-color: #3A3A3A; }
+
+.color-2 {
+  color: #3A3A3A; }
+
+.bg-3 {
+  background-color: #363B48; }
+
+.color-3 {
+  color: #363B48; }
+
+.bg-4 {
+  background-color: #DF3F54; }
+
+.color-4 {
+  color: #DF3F54; }
+
+.bg-5 {
+  background-color: #F17C71; }
+
+.color-5 {
+  color: #F17C71; }
+
+#main-header {
+  position: fixed;
+  top: 0;
+  z-index: 2000;
+  transition: all 1s; }
+  @media screen and (max-width: 650px) {
+    #main-header {
+      height: auto;
+      padding-bottom: 1%; } }
+  @media screen and (max-width: 480px) {
+    #main-header {
+      padding-bottom: 3%;
+      text-align: center; } }
+
+#logo {
+  float: left; }
+
+.big-header #main-header,
+.big-header #header_placeholder {
+  height: 139px; }
+.big-header #logo {
+  width: 149px;
+  margin-top: 40px; }
+.big-header .fillheight {
+  min-height: calc(100vh - 139px); }
+  .big-header .fillheight::nth-last-child(2) {
+    min-height: calc(100vh - 139px - 100px); }
+
+.small-header #main-header,
+.small-header #header_placeholder {
+  height: 111px; }
+.small-header #logo {
+  width: 111px;
+  margin-top: 18px; }
+.small-header .fillheight {
+  min-height: calc(100vh - 111px); }
+  .small-header .fillheight::nth-last-child(2) {
+    min-height: calc(100vh - 111px - 100px); }
+
+/*# sourceMappingURL=style.css.map */
